--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/multer": "^1.3.10",
     "@types/uuid": "^3.4.6"
   }
 }
